# Project-Hermes

./: .gitattributes  .gitignore  README.md  package-lock.json  prometheus-deployment.yaml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/.sqlx/: query-00a1fe97e7cbbfe150d63b458896887674bc1473f144c13e4f5cb7ceb0a09c84.json  query-01a3f177d9644398fda4a30de5aced2bbe733980c6564be1d10964a1ca10f16e.json  query-01c04e0d032b1f055e8b0145b21cd1c020304bc3f6b994d3d346c6efd5dcc93c.json  query-02e0c880324bff64dcae9cac21e25956ff8e9261bea9f9918bd200dd57583c39.json  query-0435fd423dc262234cb596a92bed59b3d0e91ecb5f6c7d4b6e6c14988a3160b5.json  query-05727d376a71f92ae1b49c8caac270f53a2e310bb04aabe38e88ae167ec3f88f.json  query-058a4c78eb21b45ab7f3dbc7feb5adb9dccf4b1b18c5a127443941db6f19a1c3.json  query-05974c4d243e4eb94e6de434800097568138d973ff66c512ed6dd5ade2f06f0b.json  query-05ff662d2d7150f968449f628e7de4febb4d6d0910af73b8fed935702450ad4e.json  query-06c7d5929cd025c5a33a8b6dc0edcd709b5fd83f6e721a7e9e80ad03d716430a.json  query-06fb148e266951a8e6ad128c4f351748d231696b6c1102f6ffa233cf7c77c877.json  query-077398ace2bb8c201af9e457f7bff4f35ffbf8514398a9112bf2377aafd11a20.json  query-082be0d7bc4706c598ec8a459d75aecb737df1f1bf3d5a6a0cce33aeccbf9db2.json  query-085d13527967fd3f7e7c98128121fde63c26bf8b08b9614af2cbf66e4930b90e.json  query-086eda7bdea97d123ce127883350ebfbbfc975c2a0b009480b97797b18ec25b5.json  query-08f8d2bdb65a66e6d6c00e3b7f235e0d3a22052bb6b0b57349d013bc91b16ad3.json  query-098ab8aeb5aa5cb310b79230e70087855e23331107e0b7461a8f6e90c3e690e8.json  query-09dd3f03d72d0e492d01b8c24c28481136d1a685f470b0e07c553209414e100a.json  query-09ffac048263d256c0cfa24686a7a70c665ceac9fd3ea4c9bed9c173a2290e3d.json  query-0ab05fa99890915be951ac3e3b3c298524019f552a97f81fcf416637f2215664.json  query-0b26312dd494601372b0738993f522b9131599528f5cb586783df7a603945dbe.json  query-0b4675d8c063ed58d0b7364b521e679100312939dd126962a8c9ef608c0c5e3c.json  query-0bef0912f40975ba24867569560cb66daca88d0116c072a7cf2126eb4318eb8b.json  query-0c3af8a716d19f9df685813213485a1b1e59edb9101558d327d4e02c8551532a.json  query-0c6beef327cdb15fb5f5425b7d29727fd1a51898b5086cfbd8cc1ce160597746.json  query-0d333471beb56e306150c7b27bdb217402dfaa899046f60bb63dcc420c09e529.json  query-0d92c725ed90b1eabcf4274e76b6b0783576b8a477dc33382b64a31b7aaf8f32.json  query-0dcdc57c1175e7e49bb5d72ff402c4abde9ac3787a062fc711f8776d899942a9.json  query-0dedab8d7f39e27db589ac9a008213ab55cf7e82fb85ac8313658ebed4da13fc.json  query-0e6965aa450ce04abcd84a7176eefc7f92dad2595cdea5ccba16e664cf7e7eaf.json  query-0ff5d3e190960551b16da47268635291757c8bf77c7f64928f94f318eab1a686.json  query-101c2a0d296e8822b19399e199778a717dfd1f1d9f9216b2e12b7d87ed6c7d7e.json  query-105ca643872e8080f27d2d58e0e7cbad438a13a7ad6e0afddd5e65782d728d2b.json  query-10851188d60683f1460995258e4802146adc26b20cba23d745f16b8b6ad27d23.json  query-10daa3ed1c44934094f3fc8fd9bfa30f357a8d307f05f7303f0a5ab357c6fcc5.json  query-1100228fc61f693a05bc6c9feee624b272d781e2da33d34265cbc7bae31c3b2d.json  query-11655b689d00c18619a5081a9cefce931e79a045c055746a43e9ec9f6b2c8dc4.json  query-11efe85c8245ff9e08df28da7f469bca5cd0dbf489cd9f5ec92e5efac12b34ce.json  query-11f05992c65d60abe26ab97bdca9c5c129f169c5a4cf37fba680c0bc92540cf0.json  query-1239c1723c2fe6d1b63021fc4cef6a5d2d96fd4a42a2eeb897cc1ed53928c1c7.json  (+435 more)
backend/migrations/: 20260524163111_create_users_table.sql  20260524163119_create_workspaces_table.sql  20260524163122_create_projects_table.sql  20260524163127_create_domains_table.sql  20260524234635_create_storage_system.sql  20260525112631_create_environment_variables.sql  20260525123405_create_databases_table.sql  20260525140223_create_apps_tables.sql  20260525150622_create_app_users_and_rbac.sql  20260525151431_create_cron_jobs_tables.sql  20260525153624_create_health_and_alerts.sql  20260525161702_create_volumes_table.sql  20260603180000_create_rbac_tables.sql  20260603191000_ux_dx_upgrades.sql  20260603201500_prometheus_and_routing.sql  20260603215000_add_workspace_cloudflare_and_ingress.sql  20260604084500_add_user_github_integration.sql  20260605005000_add_commit_info_to_builds.sql  20260605010000_add_external_port_to_app_instances.sql  20260605020000_add_git_subpath_to_apps.sql  20260605030000_add_baas_auth_features.sql  20260605040000_add_workspace_base_domain.sql  20260605050000_add_duration_sec_to_app_builds.sql  20260605060000_shorten_existing_db_container_names.sql  20260607100000_create_backups_and_webhooks_tables.sql  (+48 more)
(+386 files in other folders)
