[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.9", features = ["macros", "multipart", "ws"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.2", features = ["cors", "trace", "request-id"] }

sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
kube = { version = "0.91.0", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.22.0", features = ["v1_28"] }

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
serde_yaml = "0.9"

uuid = { version = "1.9.1", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }

anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

jsonwebtoken = "9.3.0"
bcrypt = "0.16.0"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"] }

dotenvy = "0.15.7"
sha2 = "0.10.8"
hmac = "0.12"

argon2 = "0.5.3"

image = "0.24"
flate2 = "1.0"
brotli = "3.3"
futures-util = "0.3"
md5 = "0.7"
async-stream = "0.3"
aes-gcm = "0.10"
base64 = "0.21"

bollard = "0.15"
rand = "0.10.1"
nanoid = "0.4"
rust-s3 = { version = "0.33.0", default-features = false, features = ["tokio-rustls-tls"] }
percent-encoding = "2.3"
zenwebp = "0.4.4"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winerror"] }

cron = "0.12"

[profile.dev]
opt-level = 1

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.zenwebp]
opt-level = 3

[profile.dev.package.zenpixels]
opt-level = 3

[profile.dev.package.zenyuv]
opt-level = 3
